# claude-sub-gateway

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docker-publish.yml  helm-publish.yml
app/: __init__.py  auth.py  claude_backend.py  config.py  errors.py  main.py  schemas.py
deploy/helm/claude-sub-gateway/: Chart.yaml  values.yaml
deploy/helm/claude-sub-gateway/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml
deploy/k8s/: claude-gateway.yaml  ingress.yaml
tests/: conftest.py  test_auth.py  test_chat_completions.py  test_models.py  test_openai_client.py  test_reliability.py  test_streaming.py  test_tools.py  test_unknown_fields.py
